Fix player name update and correct ranking endpoint handling